--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,12 @@
 .blog-preview a {
   text-decoration: none;
 }
+
+.blog-details div {
+  margin: 20px 0
+}
+.blog-details h2 {
+  font-size: 20px;
+  color:#f1356d;
+  margin-bottom: 10px;
+}
