added delete function and styled delete button

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,14 @@
   color:#f1356d;
   margin-bottom: 10px;
 }
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
 
 /* create new blog form */
 .create {
